[package]
name = "rucoonos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "boot",
    "kernel",
]

[dependencies]
bootloader = { version = "0.10.12" }
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.8"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
linked_list_allocator = "0.9.0"

rucoon = { path = "../rucoon" }
nolock = { git = "https://github.com/Lol3rrr/nolock.git", rev = "6d6df6cdd6ee890d0cf578ab9ee02769544bacdd", default_features=false, features = ["queues", "async"] }

kernel = { path = "./kernel" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",  "-display", "none"]
test-timeout = 300          # (in seconds)
test-success-exit-code = 33         # (0x10 << 1) | 1

[package.metadata.bootloader]
map-physical-memory = true

[[test]]
name = "stack_overflow"
harness = false
