[package]
name = "rucoonos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "boot",
    "kernel",
    "wasm",
    "wasm-interpret",
    "wasm-programs/*"
]

[dependencies]
bootloader = { version = "0.10" }
volatile = "0.2.6"
spin = "0.9"
x86_64 = "0.14.8"
uart_16550 = "0.2.0"
pic8259 = "0.10"
linked_list_allocator = "0.9"

rucoon = { path = "../rucoon" }
nolock = { git = "https://github.com/Lol3rrr/nolock.git", rev = "c333c1e901b2e921dbc8015030bce9155e345a85", default_features=false, features = ["queues", "async"] }

kernel = { path = "./kernel" }
wasm = { path = "./wasm" }
wasm-interpret = { path = "./wasm-interpret" }

tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",  "-display", "none"]
test-timeout = 300          # (in seconds)
test-success-exit-code = 33         # (0x10 << 1) | 1

[package.metadata.bootloader]
map-physical-memory = true

[[test]]
name = "stack_overflow"
harness = false
