[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing =  { version ="0.1", default_features = false }
nolock = { version = "0.4", default_features = false, features = ["queues"] }
